# simposiorevsalud-backend

./: Cargo.toml  README.md  init.sh  spin.toml
assets/: app.js  index.html  robots.txt  sitemap.xml
assets/admin/registro/: app.js  index.html
assets/admin/usuarios/: app.js  index.html
assets/constancias/: app.js  index.html
assets/ingreso/: app.js  index.html
assets/perfil/: app.js  index.html
assets/registro/: app.js  index.html
requests/: delete.sh  horizcert.sh  login.sh  logout.sh  register.sh  update.sh  vertcert.sh
src/: api.rs  auth.rs  db.rs  email.rs  email_examples.rs  lib.rs  types.rs
